# Task4

./: Mushroom_Prediction.py  pyproject.toml  requirements.txt
Models/: Li_Ting_model.pkl  Li_Ting_pipeline.pkl  iforest_pipeline.pkl
config/: hotel-data.yaml  mushroom-data.yaml  network-data.yaml
mlruns/0/: meta.yaml
src/: Mushroom_Prediction.py  Network_Traffic_Classification.py  hotel-app.py  hotel-model-training.py
static/image/: hotel.css  hotel.js
templates/: Network.html  hotel-predict.html  hotel.html  index.html  prediction_network.html  result.html
tests/: mushroom-model-training.py  network-model-training.py
